ext_authz/dex/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  ports:
  - name: http
    port: 5556
    targetPort: 5556
  selector:
    app: dex
