ext_authz/dex/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    zonename: zone1
  name: sso
spec:
  host: sso.apps.example.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gateway-v1
    weight: 100
  wildcardPolicy: None
