ext_authz/dex/vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dex-routing
spec:
  gateways:
    - gateway-v1
  hosts:
    - sso.apps.example.com
  http:
    - route:
        - destination:
            host: dex
            port:
              number: 5556
